# crawler-more-more

./: .gitignore  AGENTS.md  CLAUDE.md  KAFKA_INTEGRATION_REVIEW.md  readme.md
crawler-challenge/: .dockerignore  .gitignore  10k_crawling_report.md  Dockerfile  Dockerfile.crawler  Dockerfile.monitor  IMPLEMENTATION_PLAN.md  Makefile  README.md  aggressive_performance_test.py  aggressive_test_100_urls.json  dashboard.py  database.py  db_test.py  distributed_crawler.py  docker-compose.yml  docker-entrypoint-crawler.sh  enterprise_crawler.py  enterprise_crawler_test.py  init.sql  main.py  main_extreme_scale.py  main_multiprocess.py  multithreaded_crawler.py  polite_crawler.py  pyproject.toml  redis_queue_extended.py  requirements-stream.txt  requirements.txt  resilient_runner.py  run_tests.sh  sharded_distributed_crawler.py  start_crawler.bat  start_dashboard.bat  temp_logger.py  test_resilient.py  test_tranco.py  tranco_manager.py  visualize_results.py  work_logger.py  (+1 more)
crawler-challenge/config/: kafka_config.py  settings.py
crawler-challenge/core/: crawler.py  heavy_processing.py  multiprocess_crawler.py  tranco.py
crawler-challenge/data/: tranco_top1m.csv  tranco_top_500_urls.txt  tranco_urls.txt
crawler-challenge/desktop/: README.md  docker-compose.yml  requirements.txt  run_api.py  run_embedding.py  run_fast_processor.py  run_rich_processor.py  run_router.py  run_storage.py  run_url_queue.py  start.sh
crawler-challenge/docker/: Dockerfile  add_indexes.sql  docker-compose.multiprocess.yml  docker-compose.stream.yml  docker-compose.yml  init-stream.sql  init.sql  (+2 more)
(+104 files in other folders)
