[project]
name = "crawler-stream"
version = "1.0.0"
description = "High-throughput stream crawler pipeline"
requires-python = ">=3.10"

[project.optional-dependencies]
mac = [
    "httpx[http2]>=0.25.0",
    "zstandard>=0.22.0",
    "aiokafka>=0.10.0",
    "msgpack>=1.0.7",
    "python-dotenv>=1.0.0",
    "tranco",
]
desktop = [
    "aiokafka>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "html2text>=2024.2.26",
    "minio>=7.2.0",
    "asyncpg>=0.29.0",
    "msgpack>=1.0.7",
    "zstandard>=0.22.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.20.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]
